# stapelweise

./: .gitignore  LICENSE  PRODUCT_MANIFEST.md  README.md  THIRD_PARTY_NOTICES.md  VISION.md  logik.json  package-lock.json  package.json  tailwind.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mcp.rs
src-tauri/src/commands/: backup.rs  cards.rs  decks.rs  exams.rs  integrations.rs  mod.rs  obsidian.rs  seed.rs  settings.rs  stats.rs  test_engine.rs
src-tauri/src/db/: backup.rs  migrations.rs  mod.rs  models.rs  repository.rs  settings.rs
src-tauri/src/seed/: mod.rs
src-tauri/src/srs/: sm2.rs
src-tauri/src/test_engine/: mod.rs
src/lib/: anki.ts  api.ts  deep-link.ts  free-text.ts  i18n.ts  languages.ts  markdown.ts  math-evaluation.ts  math.ts  themes.ts  types.ts
src/lib/components/: ArchiveModule.svelte  BrowseCards.svelte  CardEditor.svelte  ConfirmDialog.svelte  Dashboard.svelte  DashboardExtras.svelte  DeckList.svelte  DeckModule.svelte  EmptyState.svelte  ErrorBanner.svelte  ExamCalendar.svelte  ExamModule.svelte  FlashCard.svelte  FreeTextResponse.svelte  IntegrationImports.svelte  Layout.svelte  LocalizationBridge.svelte  ProgressBar.svelte  ScoreButtons.svelte  SearchView.svelte  SettingsPanel.svelte  ShortcutHelp.svelte  SingleCardModule.svelte  StatsDashboard.svelte  StudySheetPrint.svelte  StudyView.svelte  TagList.svelte  TestView.svelte  (+1 more)
src/routes/: +layout.svelte  +page.svelte
(+23 files in other folders)
